--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body background="slike\pozadina.jpg">
+<body background="pozadina.jpg">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -21,7 +21,7 @@
                 <div class="navbar-nav">
                     <div class="logo">
                         <a class="navbar-brand" href="index.html">
-                            <img src="slike/logo/logo.svg" alt="Logo">
+                            <img src="logo.svg" alt="Logo">
                         </a>
                     </div>
                     <a class="nav-link" href="onama.html">O nama</a>
@@ -38,7 +38,7 @@
             <h1>Vagary Tours</h1>
             <p>Najbolje ponude na jednom mjestu.</p>
             <p>Bezbrižno putujte!</p>
-            <a href="slike\video_naslovna.mp4">Video</a>
+            <a href="video_naslovna.mp4">Video</a>
         </div>
     </main>
     <footer class="dno container-fluid">
@@ -66,7 +66,7 @@
                         <li><a href="galerija.html">Galerija</a></li>
                     </ul>
                     <div class="cr">
-                        <img src="slike/logo/logo.svg" alt="logo.svg" width="150px" height="150px">
+                        <img src="logo.svg" alt="logo.svg" width="150px" height="150px">
                         <p>© 2023 Vagary Tours d.o.o</p>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                 <p class=" opis1">Plaćanje:</p>
                 <br>
                 <br>
-                <img src="slike\kartice.png" alt="kartice.png" class="container-fluid"
+                <img src="kartice.png" alt="kartice.png" class="container-fluid"
                     style="width: 50%; margin-right: 60%; padding: 5%;">
                 <p class="opis2">Fiksni tečaj konverzije 1EUR = 7.53450HRK</p>
             </div>
