--- a/galerija.html
+++ b/galerija.html
@@ -7,7 +7,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body background="slike\pozadina.jpg">
+<body background="pozadina.jpg">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -18,7 +18,7 @@
                 <div class="navbar-nav">
                     <div class="logo">
                         <a class="navbar-brand" href="index.html">
-                            <img src="slike/logo/logo.svg" alt="Logo">
+                            <img src="logo.svg" alt="Logo">
                         </a>
                     </div>
                     <a class="nav-link" href="onama.html">O nama</a>
@@ -32,12 +32,12 @@
     </nav>
     <h2>Galerija</h2>
     <div class="galerija" class="container-fluid">
-        <img src="slike\video_slike\bmp\plitvice.bmp" class="img-fluid" title="Slika 1">
-        <img src="slike\video_slike\bmp\novalja.bmp" class="img-fluid" title="Slika 2">
-        <img src="slike\video_slike\bmp\zg_kaza.bmp" title="Slika 3">
-        <img src="slike\video_slike\bmp\ns_fruska.bmp" title="Slika 4">
-        <img src="slike\video_slike\bmp\dublin.bmp" title="Slika 5">
-        <img src="slike\video_slike\bmp\avion.bmp" title="Slika 6">
+        <img src="plitvice.bmp" class="img-fluid" title="Slika 1">
+        <img src="novalja.bmp" class="img-fluid" title="Slika 2">
+        <img src="zg_kaza.bmp" title="Slika 3">
+        <img src="ns_fruska.bmp" title="Slika 4">
+        <img src="dublin.bmp" title="Slika 5">
+        <img src="avion.bmp" title="Slika 6">
     </div>
     <div class="container-fluid">
         <footer class="dno container-fluid">
@@ -65,7 +65,7 @@
                             <li><a href="galerija.html">Galerija</a></li>
                         </ul>
                         <div class="cr">
-                            <img src="slike/logo/logo.svg" alt="logo.svg" width="150px" height="150px">
+                            <img src="logo.svg" alt="logo.svg" width="150px" height="150px">
                             <p>© 2023 Vagary Tours d.o.o</p>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                     <p class=" opis1">Plaćanje:</p>
                     <br>
                     <br>
-                    <img src="slike\kartice.png" alt="kartice.png" class="container-fluid"
+                    <img src="kartice.png" alt="kartice.png" class="container-fluid"
                         style="width: 50%; margin-right: 60%; padding: 5%;">
                     <p class="opis2">Fiksni tečaj konverzije 1EUR = 7.53450HRK</p>
                 </div>
