--- a/jednodn.html
+++ b/jednodn.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
-<body background="slike\pozadina.jpg">
+<body background="pozadina.jpg">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +18,7 @@
             <div class="navbar-nav">
             <div class="logo">
               <a class="navbar-brand" href="index.html">
-                <img src="slike/logo/logo.svg" alt="Logo">
+                <img src="logo.svg" alt="Logo">
               </a>
             </div>
           <a class="nav-link" href="onama.html">O nama</a>
@@ -37,15 +37,15 @@
                 <br>
                 <br>
                 <figure>
-                    <img src="slike\video_slike\bmp\plitvice.bmp" class="img-fluid" title="slika1">
+                    <img src="plitvice.bmp" class="img-fluid" title="slika1">
                     <figcaption  class="slika1 container-fluid">Plitvička jezera iz Pule i Rijeke (1 dan) <br>od €25 </figcaption>
                 </figure>
                 <figure>
-                    <img src="slike\video_slike\bmp\zg_kaza.bmp" class="img-fluid" title="slika2">
+                    <img src="zg_kaza.bmp" class="img-fluid" title="slika2">
                     <figcaption class="slika2 container-fluid"">Zagreb (1 dan) <br> Mjesto polaska: Krk, Rijeka<br> od €20</figcaption>
                 </figure>
                 <figure>
-                    <img src="slike\video_slike\bmp\st.bmp" class="img-fluid" title="slika3">
+                    <img src="st.bmp" class="img-fluid" title="slika3">
                     <figcaption class="slika3 container-fluid"">Split it Karlovca i Rijeke (1 dan)<br> od €25</figcaption>
                 </figure>
             </div>
@@ -75,7 +75,7 @@
                                 <li><a href="galerija.html">Galerija</a></li>
                             </ul>
                             <div class="cr">
-                                <img src="slike/logo/logo.svg" alt="logo.svg" width="150px" height="150px">
+                                <img src="logo.svg" alt="logo.svg" width="150px" height="150px">
                                 <p>© 2023 Vagary Tours d.o.o</p>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                         <p class=" opis1">Plaćanje:</p>
                         <br>
                         <br>
-                        <img src="slike\kartice.png" alt="kartice.png" class="container-fluid"
+                        <img src="kartice.png" alt="kartice.png" class="container-fluid"
                             style="width: 50%; margin-right: 60%; padding: 5%;">
                         <p class="opis2">Fiksni tečaj konverzije 1EUR = 7.53450HRK</p>
                     </div>
